<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App_for_assignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">1 + 1 = 3 ???</string>
    <string name="hiscore_label">High score: </string>
    <string name="start_button">BẮT ĐẦU</string>
    <string name="highscore_button">ĐIỂM CAO</string>
    <string name="exit_button">NGHỈ THÔI</string>
    <string name="setting_button">CÀI ĐẶT</string>
    <string name="true_answer">ĐÚNG</string>
    <string name="false_answer">SAI</string>
    <string name="time_help_button">CỘNG THÊM GIỜ</string>
    <string name="replay_button">CHƠI LẠI</string>
    <string name="back_button">MÀN HÌNH CHÍNH</string>
    <string name="share_button">CHIA SẺ GAME QUA FACEBOOK</string>
    <string name="setting_title_text">TÙY CHỌN</string>
    <string name="time_setting_label">Thời gian cho mỗi vòng :</string>
    <string name="adding_time_label">Thời gian cộng thêm :</string>
    <string name="decrease_time_label">Thời gian giảm mỗi vòng :</string>
    <string name="game_rank_label">Độ khó</string>
    <string name="reset_hiscore_label">Xóa điểm cao</string>
    <string name="easy">DỄ</string>
    <string name="normal">BÌNH THƯỜNG</string>
    <string name="hard">KHÓ</string>
    <string name="save_button">LƯU</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="level">Cấp độ: </string>
    <string name="share">Chia sẻ game thông qua: </string>
    <string name="facebook_app_id">1553104188292259</string>
    <string name="notification_content">Hôm nay bạn đã thư giãn chưa? Hãy giải trí cùng 1 + 1 = 3? nào !!</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
